@@ -1,3 +1,7 @@
+Wed Apr 15 19:51:11 CEST 2009 Christian Anthon <anthon@kiku.dk>
+
+	* import.c: check for bg variations when importing mat.
+
 Sun Apr  5 17:16:41 CEST 2009 Christian Anthon <anthon@kiku.dk>
 
 	* gtkboard.c, gtkgame.c: add labels to the manual dice widget
